--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
 
   cupertino_icons: ^1.0.8
   flutter_secure_storage: ^10.0.0
+  flutter_easyloading: ^3.0.5
 
 dev_dependencies:
   flutter_test:
